[package]
name = "lmk"
version = "0.1.0"
edition = "2021"
description = "A crash reporting library for command line applications"
repository = "https://github.com/msmoiz/lmk"
license = "MIT"
keywords = ["cli", "panic"]
categories = ["command-line-interface"]

[dependencies]
chrono = "0.4.38"
indoc = "2.0.5"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
ulid = "1.1.3"
